# stackalytics

./: .gitignore  .gitreview  .project  .stestr.conf  .travis.yml  .zuul.yaml  1  README.rst  Vagrantfile  commit-msg  config-generator.conf  default_data.json  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
dashboard/: decorators.py  helpers.py  memory_storage.py  parameters.py  reports.py  uwsgi.py  vault.py  web.py
dashboard/templates/: blueprint_report.html  layout.html  overview.html  widget.html
doc/source/: conf.py  index.rst
etc/: .default_data.json.swo  .default_data.json.swp  .swp  copy_of_programs.yaml  corrections.json  corrections.schema.json  default_data.json  default_data.json.bak  default_data.schema.json  domain-company  launchpad-ids  odl.yaml  odp.conf  odp_default_data.json  odp_test_default_data.json  openstack.yaml  programs.yaml  spectrometer.conf  stackalytics.conf  test_default_data.json  test_programs.yaml  update_odl_repos.py  user_data.json
etc/py27/: pip-selfcheck.json
myvirtualenv/: pip-selfcheck.json
puppet/files/: .gitignore  README.md  uwsgi-2.0.4-1.x86_64.rpm
puppet/manifests/: init.pp  vagrant.pp
puppet/templates/: stackalytics.conf.erb  uwsgi-init.sh  uwsgi-init.sh.erb  uwsgi.ini.erb
spectrometer/: version.py
spectrometer/processor/: default_data_processor.py  dump.py  launchpad_utils.py  lp.py  main.py  mls.py  mps.py  rcs.py  (+5 more)
stackalytics/: config.py
tools/: check_openstackids.py  convert_user_profile_in_order_of_username.py  correct_user_data.py  install_venv.sh  with_venv.sh
(+117 files in other folders)
