[metadata]
name = spectrometer
version = 0.1
summary = OpenDaylight analytics dashboard
description-file =
    README.rst
author = OpenDaylight
author-email = dev@opendaylight.org
home-page = http://www.opendaylight.org/
classifier =
    Environment :: OpenDaylight
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    dashboard
    spectrometer
data_files =
    etc/spectrometer =
        etc/spectrometer.conf
        etc/default_data.json

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    spectrometer-dump = spectrometer.processor.dump:main
    spectrometer-dashboard = dashboard.web:main
    spectrometer-processor = spectrometer.processor.main:main
